[platform] filtering out unsupported GC option on import (JBR-2729)
GitOrigin-RevId: 318642cc674c3fa7687a0a89d1c0bc34334827da